--- a/Practicas/Calculadora/style.css
+++ b/Practicas/Calculadora/style.css
@@ -1,7 +1,3 @@
-*{
-    padding:0;
-    margin:0;
-}
 .container{
     display: flex;
     flex-direction: column;
@@ -10,36 +6,54 @@
     height: 100vh;
     background-color:rgb(0, 0, 0);
     color: blueviolet;
-    padding: 10px;
+    padding: 2.5%;
     border-radius: 5px;
 }
 .titulo{
-    font-size: 50px;
+    font-size: 5em;
     margin-bottom: 20px;
     text-align: center;
 
 }
 .subtitulo{
-    font-size: 20px;
-    margin-bottom: 20px;
+    font-size: 1.5em;
+    margin-bottom: .1em;
     text-align: center;
 }
 .input{
-width: 300px;
-padding: 10px;
-margin: 15px;
-border-radius: 7px;
+width: 15%;
+padding: .9em;
+margin: 1%;
+border-radius: 50px;
 border-color:slateblue;
 border-width: 5px;
 border-style:solid;
 }
 .boton{
-    width: 200px;
+    width: 10%;
     padding: .9em;
-    margin: 2px;
+    margin: .5%;
     background-color:aliceblue;
     color:black;
     border: none;
-    border-radius: 50px;
+    border-radius: 10px;
     cursor: pointer;
+}
+.botonera{
+    display: flex;
+    width: 95%;
+}
+/*media query para pantallas menores a 768px*/
+@media(width<=768px){
+    .botonera{
+        flex-direction: column;
+    }
+
+    .titulo{
+        font-size: 3em; 
+    }
+
+    .subtitulo{
+        font-size: 1.5em;
+    }
 }
